--- a/negocio/package.json
+++ b/negocio/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "bootstrap-vue": "^2.21.2",
@@ -15,7 +16,9 @@
     "sweetalert2": "^11.1.0",
     "vue": "^2.6.14",
     "vue-axios": "^3.2.4",
+    "vue-input-search": "0.0.20",
     "vue-router": "^3.2.0",
+    "vue-select": "^3.13.0",
     "vue-sweetalert2": "^5.0.2",
     "vuejs-datatable": "^2.0.0-alpha.7",
     "vuetify": "^2.5.6"
