--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "sweetalert2": "^11.1.0",
     "vue": "^2.6.14",
     "vue-axios": "^3.2.4",
+    "vue-date-pick": "^1.4.1",
     "vue-input-search": "0.0.20",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
     "vue-select": "^3.13.0",
     "vue-sweetalert2": "^5.0.2",
     "vuejs-datatable": "^2.0.0-alpha.7",
+    "vuejs-datepicker": "^1.6.2",
     "vuetify": "^2.5.6"
   },
   "devDependencies": {
